--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 /***************************************************************************/
 /*      LEGEND                                                             */
-/*      HIGHLIGHT AND USE USE CTRL + F TO SKIP TO EACH SECTION             */                                                 
+/*      HIGHLIGHT AND USE USE CTRL + F + ENTER TO SKIP TO EACH SECTION     */ 
+/*                                                                         */
 /*                                                                         */
 /*      SETUP!                                                             */
 /*      Style Guide                                                        */
